@@ -2,9 +2,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.hunterstrategy</groupId>
+    <groupId>io.github.hunterstrategy</groupId>
     <artifactId>jnfs-git</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <name>java.nio FileSystem - git</name>
+    <description>A java.nio.FileSystem implementation that walks git trees at specific revisions.</description>
+    <url>https://github.com/hunterstrategy/java-filesystem-git</url>
 
     <organization>
         <name>Hunter Strategy LLC</name>
@@ -19,19 +24,41 @@
         </license>
     </licenses>
 
-    <name>java.nio FileSystem - git</name>
+    <scm>
+        <url>https://github.com/hunterstrategy/java-filesystem-git/tree/main</url>
+        <connection>scm:git:git://github.com:hunterstrategy/java-filesystem-git.git</connection>
+        <developerConnection>scm:git:ssh://github.com:hunterstrategy/java-filesystem-git.git</developerConnection>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>ossrh</id>
+            <name>Nexus Release Repository</name>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <developers>
+        <developer>
+            <name>Hunter Strategy</name>
+            <email>contact@hunterstrategy.net</email>
+            <organization>Hunter Strategy</organization>
+            <organizationUrl>http://www.hunterstrategy.net</organizationUrl>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <mdoclet.version>2.2.0</mdoclet.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.github.jnr</groupId>
             <artifactId>jnr-ffi</artifactId>
-            <version>2.2.12</version>
+            <version>2.2.13</version>
         </dependency>
     </dependencies>
 
@@ -99,6 +126,80 @@
 
     <profiles>
         <profile>
+            <id>jdk-version</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <mdoclet.version>3.1.0</mdoclet.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>release</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>env.RELEASE</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <doclet>org.jdrupes.mdoclet.MDoclet</doclet>
+                            <docletArtifact>
+                                <groupId>org.jdrupes.mdoclet</groupId>
+                                <artifactId>doclet</artifactId>
+                                <version>${mdoclet.version}</version>
+                            </docletArtifact>
+                            <additionalJOptions>
+                                <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+       <profile>
             <id>auto-java</id>
             <activation>
                 <file>
